[package]
name = "api_image"
version = "0.1.0"
authors = ["diurtorn"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
wasm-bindgen = "0.2.60"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
